ags (2.1.51)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed bisect algorithm of AgsNotation, AgsAutomation and AgsWave
	* fixed wrong ref-count in ags-eq10 recall

ags (2.1.50)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed unit-test ags_notation_test.c

ags (2.1.49)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved bisection of AgsNotation, AgsAutomation and AgsWave
	* fixed use ags_notation_add() in ags_simple_file.c
	* fixed use ags_automation_add() in ags_simple_file.c

ags (2.1.48)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reworked object properties and accessors
	* implemented object mutex of AgsTurtle
	* fixed missing clear during set samplerate and buffer size of AgsAudioSignal
	* fixed missing clear during set samplerate and buffer size of AgsWave

ags (2.1.47)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved read machines in AgsSimpleFile before editors
	* improved hihgly inneficient ags_notation_find_offset()
	* improved bisection code
	* work-around fix default XML namespace with XPath

ags (2.1.46)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_notation_find_offset() bisection x offset of notes
	* improved ags-play-notation recall to use ags_notation_find_offset()
	* refactored ags_automation_get_value() to bisection x offset of accelerations
	* fixed AgsApplySoundConfig task to run dispose after replacing soundcard/sequencer
	* fixed set property default-output-soundcard thread of AgsChannelThread in ags_channel.c
	* fixed ags offset of timestamp during paste in AgsNotationEditor, AgsAutomationEditor and AgsWaveEditor

ags (2.1.45)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed memory-leak during monitor by osc server

ags (2.1.44)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]