@@ -716,7 +716,9 @@ ags_play_lv2_audio_run_connect(AgsConnectable *connectable)
   /* call parent */
   ags_play_lv2_audio_run_parent_connectable_interface->connect(connectable);
 
-  g_object_unref(delay_audio_run);
+  if(delay_audio_run != NULL){
+    g_object_unref(delay_audio_run);
+  }
 }
 
 void
@@ -740,7 +742,9 @@ ags_play_lv2_audio_run_disconnect(AgsConnectable *connectable)
   /* call parent */
   ags_play_lv2_audio_run_parent_connectable_interface->disconnect(connectable);
 
-  g_object_unref(delay_audio_run);
+  if(delay_audio_run != NULL){
+    g_object_unref(delay_audio_run);
+  }
 }
 
 void
@@ -764,7 +768,9 @@ ags_play_lv2_audio_run_connect_connection(AgsConnectable *connectable, GObject *
 		     G_CALLBACK(ags_play_lv2_audio_run_alloc_input_callback), play_lv2_audio_run);  
   }
 
-  g_object_unref(delay_audio_run);
+  if(delay_audio_run != NULL){
+    g_object_unref(delay_audio_run);
+  }
 }
 
 void
@@ -791,7 +797,9 @@ ags_play_lv2_audio_run_disconnect_connection(AgsConnectable *connectable, GObjec
 			NULL);
   }
 
-  g_object_unref(delay_audio_run);
+  if(delay_audio_run != NULL){
+    g_object_unref(delay_audio_run);
+  }
 }
 
 void
