@@ -558,7 +558,9 @@ ags_route_lv2_audio_run_connect(AgsConnectable *connectable)
   /* call parent */
   ags_route_lv2_audio_run_parent_connectable_interface->connect(connectable);
 
-  g_object_unref(delay_audio_run);
+  if(delay_audio_run != NULL){
+    g_object_unref(delay_audio_run);
+  }
 }
 
 void
@@ -582,7 +584,9 @@ ags_route_lv2_audio_run_disconnect(AgsConnectable *connectable)
   /* call parent */
   ags_route_lv2_audio_run_parent_connectable_interface->disconnect(connectable);
 
-  g_object_unref(delay_audio_run);
+  if(delay_audio_run != NULL){
+    g_object_unref(delay_audio_run);
+  }
 }
 
 void
@@ -606,7 +610,9 @@ ags_route_lv2_audio_run_connect_connection(AgsConnectable *connectable, GObject 
 		     G_CALLBACK(ags_route_lv2_audio_run_alloc_input_callback), route_lv2_audio_run);  
   }
 
-  g_object_unref(delay_audio_run);
+  if(delay_audio_run != NULL){
+    g_object_unref(delay_audio_run);
+  }
 }
 
 void
@@ -633,7 +639,9 @@ ags_route_lv2_audio_run_disconnect_connection(AgsConnectable *connectable, GObje
 			NULL);
   }
 
-  g_object_unref(delay_audio_run);
+  if(delay_audio_run != NULL){
+    g_object_unref(delay_audio_run);
+  }
 }
 
 void
