@@ -1,3 +1,9 @@
+ags (2.1.52)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed accessing uninitialized pointer in ags_recall_lv2_run.c
+	* fixed accessing uninitialized pointer in ags_recall_ladspa_run.c
+
 ags (2.1.51)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
